homelab-gitops/infrastructure/controllers/homepage.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: homepage
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: homepage
    namespace: homepage
spec:
    replicas: 1
    selector:
        matchLabels:
            app: homepage
    template:
        metadata:
            labels:
                app: homepage
        spec:
            serviceAccountName: homepage
            containers:
                - name: homepage
                  image: ghcr.io/gethomepage/homepage@sha256:b129cb0f674bd6d204e215bde2c2fc3f11d6ad0e82f6d20007cf80f74e1acbb1
                  ports:
                      - containerPort: 3000
                  volumeMounts:
                      - name: config
                        mountPath: /app/config
            volumes:
                - name: config-ro
                  configMap:
                      name: homepage-config
                - name: config
                  emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
    name: homepage
    namespace: homepage
spec:
    selector:
        app: homepage
    ports:
        - port: 80
          targetPort: 3000
